--- a/config.yaml
+++ b/config.yaml
@@ -1,179 +1,198 @@
-config.yaml:
-name: &amp;name "Jasper10x5"
-model:
-sample_rate: &amp;sample_rate 16000
-labels: &amp;labels [" ", "a", "б", "в", "г", "д", "е", "ё", "ж", "з", "и", "й", "к", "л",
-                   "м", "н", "о", "п", "р", "с", "т", "у", "ф", "х", "ц", "ч", "ш", "щ", "ъ", "ь", "э", "ю", "я", "'"]
+model: "QuartzNet"
+sample_rate: 16000
 
-model:
-  train_ds:
-    manifest_filepath: ???
-    sample_rate: 16000
-    labels: *labels
-    batch_size: 32
-    trim_silence: True
+AudioToTextDataLayer:
     max_duration: 16.7
-    shuffle: True
-    is_tarred: False
-    tarred_audio_filepaths: null
-    tarred_shard_strategy: "scatter"
+    trim_silence: true
+    normalize_transcripts: false
+    train:
+        shuffle: true
 
-  validation_ds:
-    manifest_filepath: ???
-    sample_rate: 16000
-    labels: *labels
-    batch_size: 32
-    shuffle: False
+    eval:
+        shuffle: false
+        max_duration: null
 
-  preprocessor:
-    _target_: nemo.collections.asr.modules.AudioToMelSpectrogramPreprocessor
+AudioToMelSpectrogramPreprocessor:
+    window_size: 0.02
+    window_stride: 0.01
+    window: "hann"
     normalize: "per_feature"
-    sample_rate: *sample_rate
-    features: &amp;n_mels 64
     n_fft: 512
-    frame_splicing: 1
+    features: 64
     dither: 0.00001
+    pad_to: 16
     stft_conv: false
 
-  spec_augment:
-    _target_: nemo.collections.asr.modules.SpectrogramAugmentation
-    rect_freq: 50
+SpectrogramAugmentation:
     rect_masks: 5
     rect_time: 120
+    rect_freq: 50
 
-  encoder:
-    _target_: nemo.collections.asr.modules.ConvASREncoder
-    feat_in: *n_mels
-    activation: relu
+JasperEncoder:
+    activation: "relu"
     conv_mask: true
 
     jasper:
-      - filters: 128
-        repeat: 1
-        kernel: [11]
-        stride: [1]
-        dilation: [1]
-        dropout: *dropout
-        residual: true
-        separable: *separable
-        se: true
-        se_context_size: -1
+        -   filters: 256
+            repeat: 1
+            kernel: [33]
+            stride: [2]
+            dilation: [1]
+            dropout: 0.0
+            residual: false
+            separable: true
 
-      - filters: 256
-        repeat: *repeat
-        kernel: [13]
-        stride: [1]
-        dilation: [1]
-        dropout: *dropout
-        residual: true
-        separable: *separable
-        se: true
-        se_context_size: -1
+        -   filters: 256
+            repeat: 5
+            kernel: [33]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: true
+            separable: true
 
-      - filters: 256
-        repeat: *repeat
-        kernel: [15]
-        stride: [1]
-        dilation: [1]
-        dropout: *dropout
-        residual: true
-        separable: *separable
-        se: true
-        se_context_size: -1
+        -   filters: 256
+            repeat: 5
+            kernel: [33]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: true
+            separable: true
 
-      - filters: 256
-        repeat: *repeat
-        kernel: [17]
-        stride: [1]
-        dilation: [1]
-        dropout: *dropout
-        residual: true
-        separable: *separable
-        se: true
-        se_context_size: -1
+        -   filters: 256
+            repeat: 5
+            kernel: [33]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: true
+            separable: true
 
-      - filters: 256
-        repeat: *repeat
-        kernel: [19]
-        stride: [1]
-        dilation: [1]
-        dropout: *dropout
-        residual: true
-        separable: *separable
-        se: true
-        se_context_size: -1
+        -   filters: 256
+            repeat: 5
+            kernel: [39]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: true
+            separable: true
 
-      - filters: 256
-        repeat: 1
-        kernel: [21]
-        stride: [1]
-        dilation: [1]
-        dropout: 0.0
-        residual: false
-        separable: *separable
-        se: true
-        se_context_size: -1
+        -   filters: 256
+            repeat: 5
+            kernel: [39]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: true
+            separable: true
 
-      - filters: &enc_feat_out 1024
-        repeat: 1
-        kernel: [1]
-        stride: [1]
-        dilation: [1]
-        dropout: 0.0
-        residual: false
-        separable: *separable
-        se: true
-        se_context_size: -1
+        -   filters: 256
+            repeat: 5
+            kernel: [39]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: true
+            separable: true
 
-  decoder:
-    _target_: nemo.collections.asr.modules.ConvASRDecoder
-    feat_in: 1024
-    num_classes: 28
-    vocabulary: *labels
+        -   filters: 512
+            repeat: 5
+            kernel: [51]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: true
+            separable: true
 
-  optim:
-    name: novograd
-    # _target_: nemo.core.optim.optimizers.Novograd
-    lr: .01
-    # optimizer arguments
-    betas: [0.8, 0.5]
-    weight_decay: 0.001
+        -   filters: 512
+            repeat: 5
+            kernel: [51]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: true
+            separable: true
 
-    # scheduler setup
-    sched:
-      name: CosineAnnealing
+        -   filters: 512
+            repeat: 5
+            kernel: [51]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: true
+            separable: true
 
-      # pytorch lightning args
-      monitor: val_loss
-      reduce_on_plateau: false
+        -   filters: 512
+            repeat: 5
+            kernel: [63]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: true
+            separable: true
 
-      # Scheduler params
-      warmup_steps: null
-      warmup_ratio: null
-      min_lr: 0.0
-      last_epoch: -1
+        -   filters: 512
+            repeat: 5
+            kernel: [63]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: true
+            separable: true
 
-trainer:
-  gpus: 0 # number of gpus
-  max_epochs: 5
-  max_steps: null # computed at runtime if not set
-  num_nodes: 1
-  accelerator: ddp
-  accumulate_grad_batches: 1
-  checkpoint_callback: False  # Provided by exp_manager
-  logger: False  # Provided by exp_manager
-  log_every_n_steps: 1  # Interval of logging.
-  val_check_interval: 1.0 # check once per epoch .25 for 4 times per epoch
+        -   filters: 512
+            repeat: 5
+            kernel: [63]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: true
+            separable: true
 
-exp_manager:
-  exp_dir: null
-  name: *name
-  create_tensorboard_logger: True
-  create_checkpoint_callback: True
+        -   filters: 512
+            repeat: 5
+            kernel: [75]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: true
+            separable: true
 
-hydra:
-  run:
-    dir: .
-  job_logging:
-    root:
-      handlers: null
+        -   filters: 512
+            repeat: 5
+            kernel: [75]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: true
+            separable: true
+
+        -   filters: 512
+            repeat: 5
+            kernel: [75]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: true
+            separable: true
+
+        -   filters: 512
+            repeat: 1
+            kernel: [87]
+            stride: [1]
+            dilation: [2]
+            dropout: 0.0
+            residual: false
+            separable: true
+
+        -   filters: 1024
+            repeat: 1
+            kernel: [1]
+            stride: [1]
+            dilation: [1]
+            dropout: 0.0
+            residual: false
+
+
+labels: [' ', 'а', 'б', 'в', 'г', 'д', 'е', 'ё', 'ж', 'з', 'и', 'й', 'к', 'л', 'м', 'н', 'о', 'п', 'р', 'с', 'т', 'у', 'ф', 'х', 'ц', 'ч', 'ш', 'щ', 'ъ', 'ы', 'ь', 'э', 'ю', 'я']
